dnl Autoconf configuration script ac3dec
dnl 
dnl Aaron Holtzman - May 1999
dnl
AC_INIT(ac3dec.c)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST
AC_PREREQ(2.13)
AM_INIT_AUTOMAKE(ac3dec, 0.6.1)

AM_MAINTAINER_MODE
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_RANLIB

AC_CHECK_LIB(ossaudio, _oss_ioctl, LIBS="$LIBS -lossaudio")

dnl Set the appropriate architecture define
case "$host" in
i?86-*) AC_DEFINE(__i386__);;
alpha*-*) AC_DEFINE(__alpha__);;
sparc-*) AC_DEFINE(__sparc__);;
ppc-*) AC_DEFINE(__ppc__);;
*) echo "$host is not currently supported by ac3dec"; exit 1;;
esac

AC_OUTPUT(libac3/Makefile tools/Makefile test/Makefile Makefile ) 
