dnl Autoconf configuration script ac3dec
dnl 
dnl Aaron Holtzman - May 1999
dnl
AC_INIT(ac3dec.c)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST
AC_PREREQ(2.13)
AM_INIT_AUTOMAKE(ac3dec, 0.6.1)

AM_MAINTAINER_MODE
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_RANLIB

AC_C_BIGENDIAN

AM_PATH_ALSA(0.9.0)

dnl Set the appropriate architecture define
dnl case "$host" in
dnl i?86-*) AC_DEFINE(__i386__, 1, [Using i386 architecture]);;
dnl alpha*-*) AC_DEFINE(__alpha__, 1, [Using Alpha architecture]);;
dnl sparc-*) AC_DEFINE(__sparc__, 1, [Using SPARC architecture]);;
dnl ppc-*|powerpc-*) AC_DEFINE(__ppc__, 1, [Using PowerPC architecture]);;
dnl ia64-*) AC_DEFINE(__ia64__, 1, [Using IA-64 architecture]);;
dnl *) echo "$host is not currently supported by ac3dec"; exit 1;;
dnl esac

AC_OUTPUT(libac3/Makefile tools/Makefile test/Makefile Makefile ) 
