AC_INIT(envy24control.c)
AM_INIT_AUTOMAKE(envy24control, 0.1.0)
AC_PROG_CC
AC_PROG_INSTALL
AC_HEADER_STDC

AM_PATH_GTK(1.0.1)
AM_PATH_ALSA(0.9.0)
ENVY24CONTROL_CFLAGS="$CFLAGS $ALSA_CFLAGS $GTK_CFLAGS"
ENVY24CONTROL_LIBS="$LIBS $ALSA_LIBS $GTK_LIBS"
AC_SUBST(ENVY24CONTROL_CFLAGS)
AC_SUBST(ENVY24CONTROL_LIBS)

AC_OUTPUT(Makefile)
