# # Process this file with automake to produce Makefile.in.
AUTOMAKE_OPTIONS = 1.3 foreign

CFLAGS = -Wall -Werror -O3 -g 

bin_PROGRAMS = extract_ac3 


extract_ac3_SOURCES = extract_ac3.c
#verify is broken right now
#verify_ac3_SOURCES = verify_ac3.c
#verify_ac3_LDADD = ../parse.o ../bitstream.o ../crc.o ../debug.o ../stats.o
