bin_PROGRAMS = hdspconf
hdspconf_SOURCES = \
	hdspconf.cxx \
	defines.h \
	HC_CardPane.cxx \
	HC_CardPane.h \
	HC_SyncCheck.cxx \
	HC_SyncCheck.h \
	HC_SpdifFreq.cxx \
	HC_SpdifFreq.h \
	HC_AutoSyncRef.cxx \
	HC_AutoSyncRef.h \
	HC_SystemClock.cxx \
	HC_SystemClock.h \
	HC_ClockSource.cxx \
	HC_ClockSource.h \
	HC_SpdifIn.cxx \
	HC_SpdifIn.h \
	HC_SpdifOut.cxx \
	HC_SpdifOut.h \
	HC_PrefSyncRef.cxx \
	HC_PrefSyncRef.h \
	HC_XpmRenderer.cxx \
	HC_XpmRenderer.h \
	HC_AboutText.cxx \
	HC_AboutText.h
