cfg_files = vx222.conf vxboard.conf vxpocket.conf vxp440.conf \
	bd56002.boot \
	bd563s3.boot \
	bd563v2.boot \
	bx_1_vxp.b56 \
	bx_1_vp4.b56 \
	l_1_v22.d56 \
	l_1_vx2.d56 \
	l_1_vxp.d56 \
	l_1_vp4.d56 \
	x1_2_v22.rbt \
	x1_1_vx2.rbt \
	x1_1_vxp.rbt \
	x1_1_vp4.rbt

EXTRA_DIST = $(cfg_files)

firmwaredir = $(datadir)/alsa/firmware
firmware_DATA = $(cfg_files)

